src-tauri/check_out.txt
    Checking tauri-appaether v0.1.0 (F:\ControlCenter\src-tauri)
error[E0432]: unresolved import `rumqttc::qos`
 --> src\iot.rs:1:15
  |
1 | use rumqttc::{qos::Qos, AsyncClient, Event, MqttOptions, Packet};
  |               ^^^ expected type, found function `qos` in `rumqttc`

warning: unused import: `Manager`
 --> src\hardware.rs:2:24
  |
2 | use tauri::{AppHandle, Manager};
  |                        ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `PSTR`
 --> src\hardware.rs:3:29
  |
3 | use windows::core::{PCWSTR, PSTR};
  |                             ^^^^

warning: unused import: `Emitter`
 --> src\bridge.rs:8:24
  |
8 | use tauri::{AppHandle, Emitter};
  |                        ^^^^^^^

warning: unused import: `tokio::sync::broadcast`
 --> src\bridge.rs:9:5
  |
9 | use tokio::sync::broadcast;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `stream::StreamExt`
  --> src\bridge.rs:10:30
   |
10 | use futures::{sink::SinkExt, stream::StreamExt};
   |                              ^^^^^^^^^^^^^^^^^

warning: unused import: `sink::SinkExt`
  --> src\bridge.rs:10:15
   |
10 | use futures::{sink::SinkExt, stream::StreamExt};
   |               ^^^^^^^^^^^^^

warning: unused variable: `app`
  --> src\bridge.rs:12:21
   |
12 | pub fn start_server(app: AppHandle) {
   |                     ^^^ help: if this is intentional, prefix it with an underscore: `_app`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `tauri-appaether` (lib) generated 7 warnings
error: could not compile `tauri-appaether` (lib) due to 1 previous error; 7 warnings emitted
